# openpose_ros

./: CMakeLists.txt  FindOpenPose.cmake  README.md  package.xml  reorderskeleton.py  ros_publisher.cpp  ros_publisher_mp.cpp  showskeleton.py
launch/: mp+rskel.launch  mp+skel.launch  mp.launch  profmp.launch  profmp_c.launch
msg/: PersonArray.msg  joint.msg  person.msg
